--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aim Training Guide</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="icon" href="../images/favicon.ico">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="icon" href="images/favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&display=swap"
@@ -34,21 +34,21 @@
         <h2>Utilize these Tools for <span class="maximum">Maximum</span> Growth</h2>
         <div class="tool-box">
             <div class="tool-col">
-                <img src="../images/aim-labs.jpeg" alt="Aim-labs">
+                <img src="images/aim-labs.jpeg" alt="Aim-labs">
                 <div class="tool-txt">
                     <h3>Aim Labs</h3>
                     <p>All you need here is some gridshot<br> in your life.</p>
                 </div>
             </div>
             <div class="tool-col">
-                <img src="../images/valorant-img.jpeg" alt="youtube">
+                <img src="images/valorant-img.jpeg" alt="youtube">
                 <div class="tool-txt">
                     <h3>Youtube</h3>
                     <p>Watch big names like Shroud, Strahfe, Tenz, Dashie Games,<br> Fouseytube, Asmr Tingles, etc..</p>
                 </div>
             </div>
             <div class="tool-col">
-                <img src="../images/shake-weight-2.jpeg" alt="workout">
+                <img src="images/shake-weight-2.jpeg" alt="workout">
                 <div class="tool-txt">
                     <h3>Arm Workout</h3>
                     <p>Get a good workout in for your arm,<br> it really gets the blood flowing!
